[tool.poetry]
name = "pupiline"
version = "0.1.0"
description = ""
authors = ["7cm-diameter <from.this.ridiculous.loop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
opencv-python = "^4.5.4"
scikit-image = "^0.18.3"
tables = "^3.6.1"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = {extras = ["all"], version = "^0.36.2"}
isort = "^5.10.1"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
